# tiage

./: CMakeLists.txt  LICENSE  README.md
inc/tiage/: Color.h  DrawableChar.h  Hitbox.h  IAsciiRenderer.h  IConsole.h  IFileSystem.h  Matrix.h  Menu.h  Object.h  Position.h  Renderer.h  Sprite.h  StdoutRenderer.h  Vec2.h  Viewport.h  WinConsole.h  WinFileSystem.h
src/: DrawableChar.cpp  Hitbox.cpp  IConsole.cpp  IFileSystem.cpp  Menu.cpp  Object.cpp  Renderer.cpp  Sprite.cpp  StdoutRenderer.cpp  Viewport.cpp  WinConsole.cpp  WinFileSystem.cpp
